--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "psyda-frontend",
   "version": "1.2.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "homepage": ".",
   "dependencies": {
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
+    "express": "^4.17.1",
     "history": "4.10.1",
     "mdbreact": "^4.27.0",
     "node-sass": "4.14.1",
