--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "psyda-frontend",
   "version": "1.2.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://psyda-frontend.herokuapp.com",
   "dependencies": {
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
